Remote: get hostname from HOSTNAME env var

--- a/remote/src/main/resources/application.conf
+++ b/remote/src/main/resources/application.conf
@@ -5,6 +5,7 @@ akka {
   remote {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
+      hostname = ${HOSTNAME}
       port = 2552
     }
   }
